--- a/.github/workflows/build-citus-enterprise-nightlies.yml
+++ b/.github/workflows/build-citus-enterprise-nightlies.yml
@@ -31,6 +31,7 @@ jobs:
           - ol/7
           - debian/stretch
           - debian/buster
+          - debian/bullseye
           - ubuntu/bionic
           - ubuntu/focal
 
