Adds current_branch variable

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -8,6 +8,7 @@ env:
   PACKAGING_PASSPHRASE: "${{ secrets.PACKAGING_PASSPHRASE }}"
   DOCKERHUB_PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
   DOCKERHUB_USER_NAME: "${{ secrets.DOCKERHUB_USER_NAME }}"
+  CURRENT_BRANCH: ${GITHUB_REF##*/}
 on:
   push:
     branches: "**"
