--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -57,7 +57,7 @@ jobs:
           git checkout -- dockerfiles
           ./update_images
         env:
-          TARGET_PLATFORM: ${{ matrix.TARGET_PLATFORM }}
+          PACKAGING_IMAGE_PLATFORM: ${{ matrix.TARGET_PLATFORM }}
 
       - name: Clone tools repo for test
         run: git clone -b v0.8.8 --depth=1  https://github.com/citusdata/tools.git tools
