--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -57,7 +57,7 @@ jobs:
           git checkout -- dockerfiles
           ./update_images
         env:
-          PACKAGING_IMAGE_PLATFORM: ${{ matrix.TARGET_PLATFORM }}
+          TARGET_PLATFORM: ${{ matrix.TARGET_PLATFORM }}
 
       - name: Clone tools repo for test
         run: git clone -b v0.8.8 --depth=1  https://github.com/citusdata/tools.git tools
@@ -67,7 +67,7 @@ jobs:
           python -m pip install -r tools/packaging_automation/requirements.txt
           python -m pytest -q tools/packaging_automation/tests/test_citus_package.py -k 'test_build_packages'
         env:
-          PLATFORM: "${{matrix.TARGET_PLATFORM}}"
+          PACKAGING_IMAGE_PLATFORM: "${{matrix.TARGET_PLATFORM}}"
 
       - name: Push images
         run: ./ci/push_images
