--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -61,3 +61,5 @@ jobs:
           --fancy_ver_no "${{ github.event.inputs.fancy_version_no }}" \
           --changelog_entry "${{ github.event.inputs.changelog_entry }}" \
           --exec_path "$(pwd)"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
