--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -1,8 +1,11 @@
 name: Update Package Properties
 
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read/write
+  pull-requests: read/write
+  actions: read/write
+  repository projects: read/write
+  statuses: read/write
 
 env:
   PRJ_NAME: "citus"
@@ -35,20 +38,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set git name and email
-        run: |
-          git config --global user.email "${{ github.event.inputs.microsoft_email }}" && \
-          git config --global user.name "${{ github.event.inputs.name }}"
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          token: "${GH_TOKEN}"
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev python3-testresources
 
       - name: Clone tools branch
         run: git clone -b v0.8.6 --depth=1  https://github.com/citusdata/tools.git tools
+
+      - name: Set git name and email
+        run: |
+          git config --global user.email "${{ github.event.inputs.microsoft_email }}" && \
+          git config --global user.name "${{ github.event.inputs.name }}"
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
