--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -1,10 +1,15 @@
 name: Update Package Properties
 
 permissions:
-  contents: write
-  pull-requests: write
   actions: write
-  repository projects: write
+  checks: write
+  contents: write
+  deployments: write
+  issues: write
+  packages: write
+  pull-requests: write
+  repository-projects: write
+  security-events: write
   statuses: write
 
 env:
