--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -8,15 +8,23 @@ on:
     inputs:
       tag_name:
         description: "The tag name on the project repo to be released"
+        required: true
       fancy_version_no:
         description: "If fancy versioning is needed, set value greater than 1 e.g 2"
         default: "1"
+        required: false
       microsoft_email:
         description: "Email to be written on changelogs"
         default: "gindibay@microsoft.com"
+        required: false
       name:
         description: "Name to be written on changelogs"
         default: "Gurkan Indibay"
+        required: false
+      changelog_entry:
+        description: "If filled, changelog other than default entry will be written"
+        default: ""
+        required: false
 jobs:
   update_package_properties:
     name: Update package properties
@@ -25,12 +33,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
+        with:
+          token: ${{ secrets.GH_TOKEN }}
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev
+        run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev python3-testresources
 
       - name: Clone tools branch
-        run: git clone -b v0.8.1 --depth=1 https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.8 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Set git name and email
         run: |
@@ -45,8 +54,10 @@ jobs:
           python -m tools.packaging_automation.update_package_properties \
           --gh_token="${GH_TOKEN}" \
           --prj_name "${PRJ_NAME}" \
-          --tag_name "${{ github.event.inputs.tag_name }}" \
-          --email "${{ github.event.inputs.microsoft_email }}" \
+          --tag_name ${{ github.event.inputs.tag_name }} \
+          --email ${{ github.event.inputs.microsoft_email }} \
           --name "${{ github.event.inputs.name }}" \
           --pipeline \
+          --fancy_ver_no "${{ github.event.inputs.fancy_version_no }}" \
+          --changelog_entry "${{ github.event.inputs.changelog_entry }}" \
           --exec_path "$(pwd)"
