--- a/.github/workflows/build-pgaf-community-nightlies.yml
+++ b/.github/workflows/build-pgaf-community-nightlies.yml
@@ -1,7 +1,7 @@
 name: Build and publish pgaf community nightly packages
 
 env:
-  MAIN_BRANCH: "all-pgautofailover"
+  MAIN_BRANCH: "develop"
   PACKAGE_CLOUD_REPO_NAME: "citusdata/community-nightlies"
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
@@ -45,7 +45,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER_NAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Clone tools branch
-        run: git clone -b v0.8.6 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.9 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Clone build branch
         run: git clone -b "${MAIN_BRANCH}" --depth=1  https://github.com/citusdata/packaging.git packaging
