--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -15,6 +15,17 @@ on:
   workflow_dispatch:
 
 jobs:
+  myEvent:
+  runs-on: ubuntu-latest
+  steps:
+    - name: Repository Dispatch
+      uses: peter-evans/repository-dispatch@v1
+      with:
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
+        repository: gurkanindibay/tools
+        event-type: package_test
+        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+
   build_package:
     name: Build package
     runs-on: ubuntu-latest
