--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -36,7 +36,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get package version
-        run: source pkgvars
+        run: |
+          source pkgvars
+          echo ${pkglatest}
 
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v1
