Adds test trigger

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -33,7 +33,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           repository: gurkanindibay/tools
           event-type: package_test
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ steps.set_version.outputs.version }}"}'
+          client-payload: '{"ref": "${{ github.ref }}", "version": "${{ steps.set_version.outputs.version }}"}'
 
   build_package:
     name: Build package
