--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -40,7 +40,6 @@ jobs:
 
       - name: Install package dependencies
         run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev python3-testresources
-        
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
@@ -73,14 +72,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Read Parameter
+      - name: Set citus version
         id: set_version
         run: |
           source pkgvars
           version=${pkglatest%.citus-1}
           echo ::set-output name=version::${version}
-      - name: Print Parameter
-        run: echo ${{ steps.set_version.outputs.version }}
       - name: Trigger package tests
         uses: peter-evans/repository-dispatch@v1
         with:
