--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -80,6 +80,6 @@ jobs:
           version=${pkglatest%.citus-1}
           echo ::set-output name=version::${version}
       - name: Trigger package tests
-        run: gh workflow run "citus-package-tests" --repo gurkanindibay/tools -f prj_ver="${{ steps.set_version.outputs.version }}"
+        run: gh workflow run "citus-package-tests" --repo citusdata/tools -f prj_ver="${{ steps.set_version.outputs.version }}"
         env:
           GITHUB_TOKEN: "${{ secrets.GH_TOKEN }}"
