Adds an ignore for topn

--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -15,3 +15,4 @@ debian:
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
+  - "E: zero-length /usr/pgsql-11/share/extension/topn.*"
