--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -15,4 +15,4 @@ debian:
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
-  - "E: zero-length /usr/pgsql-11/share/extension/topn.*"
+  - ".*: E: zero-length /usr/pgsql-11/share/extension/topn.*"
