Adds an ignore to make the build success

--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -15,4 +15,4 @@ debian:
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
-  - ".*: E: zero-length /usr/pgsql-.*/share/extension/citus.*'"
+  - ".*: E: zero-length /usr/pgsql-.*/share/extension/citus.*"
