--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -9,9 +9,11 @@ base:
   - "gpg: WARNING: options in `/root/.gnupg/gpg.conf' are not yet active during this run"
   - ".* warning: overriding recipe for target 'check'"
   - "dpkg-genchanges: warning: the current version .* is earlier than the previous one .*"
+  - ".*: warning: '__s' may be used uninitialized in this function \\[-Wmaybe-uninitialized\\].*"
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
+  - ".*: E: zero-length /usr/pgsql-.*/share/extension/citus.*"
