Adds an ignore to make the build success

--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -15,6 +15,7 @@ base:
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
+  - "configure: WARNING: unrecognized options: --with-security-flags"
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
