--- a/postgres-matrix.yml
+++ b/postgres-matrix.yml
@@ -7,7 +7,7 @@ version_matrix:
   - 9.0:
       postgres_versions: [11, 12]
   - 9.5:
-      postgres_versions: [11,12,13]
+      postgres_versions: [11, 12, 13]
   - 10.1:
       postgres_versions: [12, 13]
   - 10.2:
