Adds TARGET_PLATFORM parameter for push_images

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -76,3 +76,5 @@ jobs:
 
       - name: Push images
         run: ./ci/push_images
+        env:
+          TARGET_PLATFORM: ${{ matrix.TARGET_PLATFORM }}
