--- a/.github/workflows/build-package-test.yml
+++ b/.github/workflows/build-package-test.yml
@@ -75,3 +75,5 @@ jobs:
 
       - name: Push images
         run: ./ci/push_images
+        env:
+          TARGET_PLATFORM: ${{ matrix.TARGET_PLATFORM }}
