--- a/.github/workflows/build-package-test.yml
+++ b/.github/workflows/build-package-test.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Execute packaging tests
         run: |
           python -m pip install -r tools/packaging_automation/requirements.txt
-          python -m pytest -q tools/packaging_automation/tests/test_citus_package.py -k 'test_build_packages'
+          python -m pytest -q tools/packaging_automation/tests/test_citus_package.py -k 'test_build_packages' -s
         env:
           PACKAGING_IMAGE_PLATFORM: "${{matrix.TARGET_PLATFORM}}"
 
