--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -12,6 +12,10 @@ base:
   - "configure: WARNING: If you run into issues during linking or bitcode compilation, you can use --without-security-flags."
   - "dpkg-genchanges: warning: the current version .* is earlier than the previous one .*"
   - ".*: warning: '__s' may be used uninitialized in this function \\[-Wmaybe-uninitialized\\].*"
+  - ".* unused substitution variable \\$\\{misc:Depends\\}.*"
+  - ".*: substitution variable \\$\\{postgresql:Depends\\} unused, but is defined.*"
+  - ".* unused substitution variable \\$\\{postgresql:Depends\\}.*"
+
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
