Adds ignore for rpm

--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -25,5 +25,5 @@ rpm:
   - ".*: W: no-documentation"
   - ".*: W: no-manual-page-for-binary citus-enterprise-pg-.*-setup"
   - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/lib/citus.so"
-  -   - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/bin/pg_send_cancellation"
+  - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/bin/pg_send_cancellation"
   - ".*: E: zero-length /usr/pgsql-.*/share/extension/citus.*"
