--- a/.github/workflows/build-citus-community-nightlies.yml
+++ b/.github/workflows/build-citus-community-nightlies.yml
@@ -46,9 +46,6 @@ jobs:
       - name: Clone tools branch
         run: git clone -b v0.8.12 --depth=1  https://github.com/citusdata/tools.git tools
 
-      - name: Clone build branch
-        run: git clone -b "${MAIN_BRANCH}" --depth=1  https://github.com/citusdata/packaging.git packaging
-
       - name: Install package dependencies
         run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev python3-testresources
 
@@ -64,14 +61,4 @@ jobs:
           --secret_key "${PACKAGING_SECRET_KEY}" \
           --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
-          --input_files_dir "$(pwd)/packaging"
-
-      - name: Publish packages
-        run: |
-          python -m  tools.packaging_automation.upload_to_package_cloud \
-          --platform "${{ matrix.platform }}" \
-          --package_cloud_api_token "${PACKAGE_CLOUD_API_TOKEN}" \
-          --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
-          --output_file_path "$(pwd)/packages" \
-          --current_branch "${GITHUB_REF##*/}" \
-          --main_branch "develop"
+          --input_files_dir "$(pwd)"
