--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -15,6 +15,7 @@ base:
   - ".* unused substitution variable \\$\\{misc:Depends\\}.*"
   - ".*: substitution variable \\$\\{postgresql:Depends\\} unused, but is defined.*"
   - ".* unused substitution variable \\$\\{postgresql:Depends\\}.*"
+  - ".*: WARNING: unrecognized options: --with-security-flags"
 
 debian:
   - ".*: W: invalid-license Commercial"
@@ -27,3 +28,4 @@ rpm:
   - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/lib/citus.so"
   - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/bin/pg_send_cancellation"
   - ".*: E: zero-length /usr/pgsql-.*/share/extension/citus.*"
+
