* Adds ignore for debian * Changes version for postgres

--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -27,3 +27,4 @@ rpm:
   - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/lib/citus.so"
   - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/bin/pg_send_cancellation"
   - ".*: E: zero-length /usr/pgsql-.*/share/extension/citus.*"
+  - ".*: WARNING: unrecognized options: --with-security-flags"
