Disables nightly releases to skip nightly fails

--- a/.github/workflows/build-citus-enterprise-nightlies.yml
+++ b/.github/workflows/build-citus-enterprise-nightlies.yml
@@ -8,9 +8,11 @@ env:
   DOCKERHUB_USER_NAME: ${{ secrets.DOCKERHUB_USER_NAME }}
   DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 on:
-  push:
-    branches:
-      - "**"
+# Temporarily disabled nightly tests until releasing 10x releases
+# TODO: Enable it in working releases
+#  push:
+#    branches:
+#      - "**"
   workflow_dispatch:
 
 jobs:
