--- a/.github/workflows/build-citus-enterprise-nightlies.yml
+++ b/.github/workflows/build-citus-enterprise-nightlies.yml
@@ -28,6 +28,7 @@ jobs:
           - ol/7
           - debian/stretch
           - debian/buster
+          - debian/bullseye
           - ubuntu/bionic
           - ubuntu/focal
 
