--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -15,6 +15,7 @@ base:
   - ".* unused substitution variable \\$\\{misc:Depends\\}.*"
   - ".*: substitution variable \\$\\{postgresql:Depends\\} unused, but is defined.*"
   - ".* unused substitution variable \\$\\{postgresql:Depends\\}.*"
+  - "/9.1.3.citus/src/backend/distributed/planner/shard_pruning.c:179:24: warning: field 'compareValueFunctionCall' with variable sized type 'FunctionCall2InfoData' not at the end of a struct or class is a GNU extension [-Wgnu-variable-sized-type-not-at-end]"
 
 debian:
   - ".*: W: invalid-license Commercial"
