--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -29,6 +29,7 @@ jobs:
           - ol/8
           - debian/stretch
           - debian/buster
+          - debian/bullseye
           - ubuntu/bionic
           - ubuntu/focal
 
