--- a/dockerfiles/oraclelinux-6-pg14/Dockerfile
+++ b/dockerfiles/oraclelinux-6-pg14/Dockerfile
@@ -8,6 +8,10 @@ RUN [[ oraclelinux != centos ]] || [[ 6 != 8 ]] || ( \
 
 RUN yum -y update
 
+# FIXME: Hack around docker/docker#10180
+RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
+    && yum clean all
+
 # Enable some other repos for some dependencies in OL/7 
 # see https://yum.oracle.com/getting-started.html#installing-from-oracle-linux-yum-server
 RUN [[ oraclelinux != oraclelinux ]] || [[ 6 != 7 ]] || ( \
