Adds POSTGRES_VERSION env variable in build-test pipeline and push_images to process postgres images for centos one by one

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -86,3 +86,4 @@ jobs:
         run: ./ci/push_images
         env:
           TARGET_PLATFORM: ${{ matrix.TARGET_PLATFORM }}
+          POSTGRES_VERSION: ${{ matrix.POSTGRES_VERSION }}
