Adds enterprise entries for citus.spec file

--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -20,4 +20,6 @@ debian:
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
+  - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/lib/citus.so"
+  - ".*: W: unstripped-binary-or-object /usr/pgsql-.*/bin/pg_send_cancellation"
   - ".*: E: zero-length /usr/pgsql-.*/share/extension/citus.*"
