--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -51,6 +51,7 @@ jobs:
           - TARGET_PLATFORM: debian,stretch
           - TARGET_PLATFORM: ubuntu,focal
           - TARGET_PLATFORM: ubuntu,bionic
+          - TARGET_PLATFORM: ubuntu,jammy
           - TARGET_PLATFORM: pgxn
 
     steps:
@@ -73,7 +74,7 @@ jobs:
           POSTGRES_VERSION: ${{ matrix.POSTGRES_VERSION }}
 
       - name: Clone tools repo for test
-        run: git clone -b v0.8.13 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.15 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Execute packaging tests
         run: |
