Adds ACR environment variables

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -7,6 +7,8 @@ env:
   PACKAGING_PASSPHRASE: "${{ secrets.PACKAGING_PASSPHRASE }}"
   DOCKERHUB_PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
   DOCKERHUB_USER_NAME: "${{ secrets.DOCKERHUB_USER_NAME }}"
+  ACR_PASSWORD: "${{ secrets.ACR_PASSWORD }}"
+  ACR_SERVICE_PRINCIPAL_ID: "${{ secrets.ACR_SERVICE_PRINCIPAL_ID }}"
   CURRENT_BRANCH: "${GITHUB_REF##*/}"
   TEST: false
 on:
