--- a/dockerfiles/debian-buster-all/Dockerfile
+++ b/dockerfiles/debian-buster-all/Dockerfile
@@ -91,7 +91,7 @@ COPY make_pg_buildext_parallel.patch /
 RUN patch `which pg_buildext` < /make_pg_buildext_parallel.patch
 
 # Added for pg15 beta package support. Without this pg_buildext gives below error
-ENV DEB_PG_SUPPORTED_VERSIONS=10 11 12 13 14 15
+ENV DEB_PG_SUPPORTED_VERSIONS="10 11 12 13 14 15"
 
 # place scripts on path and declare output volume
 ENV PATH /scripts:$PATH
