--- a/postgres-matrix.yml
+++ b/postgres-matrix.yml
@@ -1,6 +1,8 @@
 name: Postgres Version Matrix
-project_name: citus
+project_name: topn
 
 version_matrix:
   - 2.4:
-      postgres_versions: [11,12,13,14]
+      postgres_versions: [ 11,12,13,14 ]
+  - 2.5:
+      postgres_versions: [ 11,12,13,14,15 ]
