--- a/postgres-matrix.yml
+++ b/postgres-matrix.yml
@@ -3,4 +3,6 @@ project_name: topn
 
 version_matrix:
   - 2.4.0:
-      postgres_versions: [11, 12, 13, 14]
+      postgres_versions: [ 10, 11, 12, 13, 14 ]
+  - 2.5.0:
+      postgres_versions: [ 10, 11, 12, 13, 14, 15 ]
