Adds pg15 into support matrix for 11.1.1 (#981)
* Adds pg15 into support matrix for 11.1.1

* Removes ol/7 support since pg15 packages does
not exist

* Fixes whitespace problem in postgres-matrix

--- a/postgres-matrix.yml
+++ b/postgres-matrix.yml
@@ -13,4 +13,6 @@ version_matrix:
   - 10.2:
       postgres_versions: [12, 13, 14]
   - 11.0:
-      postgres_versions: [13,14]
+      postgres_versions: [13, 14]
+  - 11.1:
+      postgres_versions: [ 13, 14, 15 ]
